--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Unica+One&family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Megrim&display=swap');
+
 @import 'tailwindcss';
+@import 'tailwind-scrollbar-hide/v4';
 
 @font-face {
   font-family: "Romantic";
